Correcoes de posicao dos itens

--- a/jogo.html
+++ b/jogo.html
@@ -28,22 +28,16 @@
 <div class="container">
     <div class="container_origem">
         
-        <div><div class="box"><img src="img/origem/R02_luvaprocedimento.png"   id="01_02" id="01_02"
-id="02_03"
-id="03_03"
-id="04_01"
-id="05_04"
-id="06_03"
-id="07_02"alt="Luva de procedimento" class="draggable" draggable="true"></div><!--2 - Luva de procedimento--></div>
-        <div><div class="box"><img src="img/origem/R03_seringas_agulhas.png"        id="02_03" id="02_03" alt="Seringas e Agulhas" class="draggable" draggable="true"></div><!--3 - Seringas e Agulhas--></div>
-        <div><div class="box"><img src="img/origem/R03_lamina_laboratorio.png"      id="03_03" id="03_03" alt="Lâminas de laboratorio" class="draggable" draggable="true"></div><!--3- Lâminas de laboratorio--></div>
-        <div><div class="box"><img src="img/origem/R02_tapetehigienio.png"          id="04_01" id="04_01" alt="Tapete Higienico" class="draggable" draggable="true"></div><!--1 - Tapete Higienico--></div>
-        <div><div class="box"><img src="img/origem/R04_corpos_animais.png"          id="05_04" id="05_04" alt="Corpos de animais" class="draggable" draggable="true"></div><!--4 - Corpos de animais--></div>
-        <div><div class="box"><img src="img/origem/R03_lamina_bisturi.png"          id="06_03" id="06_03" alt="Laminas de bisturi" class="draggable" draggable="true"></div><!--3 - Laminas de bisturi--></div>
-        <div><div class="box"><img src="img/origem/R02_gaze.png"                    id="07_02" id="07_02" alt="Gazes e algodão" class="draggable" draggable="true"></div><!--2 - Gazes e algodão--></div>
-        <div><div class="box"><img src="img/origem/R03_frascos_de_vacina.png"       id="08_03" id="07_02" alt="Gazes e algodão" class="draggable" draggable="true"></div><!--2 - Gazes e algodão--></div>
-        <div><div class="box"><img src="img/origem/R02_latas_raca_vazia.png"        id="09_01" id="07_02" alt="Gazes e algodão" class="draggable" draggable="true"></div><!--2 - Gazes e algodão--></div>
-        <div><div class="box"><img src="img/origem/R02_embalagem_de_comprimidos.png"id="10_02" id="07_02" alt="Gazes e algodão" class="draggable" draggable="true"></div><!--2 - Gazes e algodão--></div>
+        <div><div class="box"><img src="img/origem/R02_luvaprocedimento.png"         id="01_02" alt="Luva de procedimento" class="draggable" draggable="true"></div><!--2 - Luva de procedimento--></div>
+        <div><div class="box"><img src="img/origem/R03_seringas_agulhas.png"         id="02_03" alt="Seringas e Agulhas" class="draggable" draggable="true"></div><!--3 - Seringas e Agulhas--></div>
+        <div><div class="box"><img src="img/origem/R03_lamina_laboratorio.png"       id="03_03" alt="Lâminas de laboratorio" class="draggable" draggable="true"></div><!--3- Lâminas de laboratorio--></div>
+        <div><div class="box"><img src="img/origem/R02_tapetehigienio.png"           id="04_01" alt="Tapete Higienico" class="draggable" draggable="true"></div><!--1 - Tapete Higienico--></div>
+        <div><div class="box"><img src="img/origem/R04_corpos_animais.png"           id="05_04" alt="Corpos de animais" class="draggable" draggable="true"></div><!--4 - Corpos de animais--></div>
+        <div><div class="box"><img src="img/origem/R03_lamina_bisturi.png"           id="06_03" alt="Laminas de bisturi" class="draggable" draggable="true"></div><!--3 - Laminas de bisturi--></div>
+        <div><div class="box"><img src="img/origem/R02_gaze.png"                     id="07_02" alt="Gazes e algodão" class="draggable" draggable="true"></div><!--2 - Gazes e algodão--></div>
+        <div><div class="box"><img src="img/origem/R03_frascos_de_vacina.png"        id="08_03" alt="Frascos de vacina vazios" class="draggable" draggable="true"></div><!--2 - Gazes e algodão--></div>
+        <div><div class="box"><img src="img/origem/R02_latas_raca_vazia.png"         id="09_01" alt="Latas de ração vazias" class="draggable" draggable="true"></div><!--2 - Gazes e algodão--></div>
+        <div><div class="box"><img src="img/origem/R02_embalagem_de_comprimidos.png" id="10_02" alt="Embalagens de comprimidos vazias" class="draggable" draggable="true"></div><!--2 - Gazes e algodão--></div>
 
     </div>
     <div class="container_destino" >
