Atualizacao de comentarios

--- a/jogo.html
+++ b/jogo.html
@@ -35,9 +35,9 @@
         <div><div class="box"><img src="img/origem/R04_corpos_animais.png"           id="05_04" alt="Corpos de animais" class="draggable" draggable="true"></div><!--4 - Corpos de animais--></div>
         <div><div class="box"><img src="img/origem/R03_lamina_bisturi.png"           id="06_03" alt="Laminas de bisturi" class="draggable" draggable="true"></div><!--3 - Laminas de bisturi--></div>
         <div><div class="box"><img src="img/origem/R02_gaze.png"                     id="07_02" alt="Gazes e algodão" class="draggable" draggable="true"></div><!--2 - Gazes e algodão--></div>
-        <div><div class="box"><img src="img/origem/R03_frascos_de_vacina.png"        id="08_03" alt="Frascos de vacina vazios" class="draggable" draggable="true"></div><!--2 - Gazes e algodão--></div>
-        <div><div class="box"><img src="img/origem/R02_latas_raca_vazia.png"         id="09_01" alt="Latas de ração vazias" class="draggable" draggable="true"></div><!--2 - Gazes e algodão--></div>
-        <div><div class="box"><img src="img/origem/R02_embalagem_de_comprimidos.png" id="10_02" alt="Embalagens de comprimidos vazias" class="draggable" draggable="true"></div><!--2 - Gazes e algodão--></div>
+        <div><div class="box"><img src="img/origem/R03_frascos_de_vacina.png"        id="08_03" alt="Frascos de vacina vazios" class="draggable" draggable="true"></div><!--3 - Frascos de vacina vazios--></div>
+        <div><div class="box"><img src="img/origem/R02_latas_raca_vazia.png"         id="09_01" alt="Latas de ração vazias" class="draggable" draggable="true"></div><!--1 - Latas de ração vazias--></div>
+        <div><div class="box"><img src="img/origem/R02_embalagem_de_comprimidos.png" id="10_02" alt="Embalagens de comprimidos vazias" class="draggable" draggable="true"></div><!--2 - Embalagens de comprimidos vazias--></div>
 
     </div>
     <div class="container_destino" >
